# plugin-rust

./: Cargo.toml  LICENSE  README.md
tplug/: Cargo.toml
tplug-common/: Cargo.toml
tplug-common/src/: lib.rs  plugin.rs
tplug-common/src/plugins/: mod.rs  types.rs
tplug-macros/: Cargo.toml  build.rs
tplug-macros/src/: lib.rs
tplug-plugin/: Cargo.toml
tplug-plugin/src/: lib.rs
tplug/src/: main.rs
