[workspace]
resolver = "2"
members = ["tplug", "tplug-common", "tplug-macros", "tplug-plugin"]

[workspace.dependencies]
log = { version = "0.4.22", features = ["std"] }
thiserror = "2.0.11"
anyhow = "1.0.95"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
split-debuginfo = "off"
