[package]
name = "tplug-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.96", default-features = false, features = [
  "full",       # Types
  "proc-macro", # Proc macro parsing
  "parsing",    # Also proc macro parsing
  "printing",   # Codegen
  # "extra-traits", # This trait should never be on during production releases
] }
proc-macro2 = "1.0.93"

[build-dependencies]
rustc_version = "0.4.1"
anyhow.workspace = true
